name:                app
version:             0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
copyright:           2016 GitHub
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  build-depends:       zlib == 0.6.2
  default-language:    Haskell2010
