name:                app
version:             0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
copyright:           2016 GitHub
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  build-depends:       fused-effects == 0.4.0.0
  default-language:    Haskell2010

executable app
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base, semilattices == 0.0.0.4
  default-language:    Haskell2010
