name:                app
version:             0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
copyright:           2016 GitHub
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  build-depends:       base >= 4.8 && < 5
                     , text == 1.2.2.1
  default-language:    Haskell2010
